--- a/slides/cap_intro.tex
+++ b/slides/cap_intro.tex
@@ -248,9 +248,9 @@ K = \frac{\overline{P_o} - \overline{P_e}}{1 - \overline{P_e}}
 
 donde \(\overline{P_o}\) es la proporción media observada de acuerdo entre los anotadores y \(\overline{P_e}\) es la proporción media esperada de acuerdo por azar.
 
-Finalmente, se lleva a cabo un proceso de consolidación de las anotaciones. Por ejemplo, si se cuenta con tres anotadores, se puede utilizar una regla de mayoría simple para asignar las etiquetas finales a los datos. En algunos casos, los ejemplos en los que hay desacuerdo pueden ser etiquetados nuevamente por anotadores más experimentados, mientras que en otros casos se eliminan del conjunto de datos. Al conjunto de datos resultante de este proceso se le llama ``gold standard'' o ``ground truth'' y se utiliza posteriormente para entrenar modelos de aprendizaje automático. 
+Finalmente, se lleva a cabo un proceso de consolidación de las anotaciones. Por ejemplo, si se cuenta con tres anotadores, se puede utilizar una regla de mayoría simple para asignar las etiquetas finales a los datos. En algunos casos, los ejemplos en los que hay desacuerdo pueden ser etiquetados nuevamente por anotadores más experimentados, mientras que en otros casos se eliminan del conjunto de datos. Todas estas decisiones pueden tener consecuencias en la calidad de los conjuntos de datos y, en consecuencia, en el rendimiento de los modelos entrenados con estos datos.
 
-Todas estas decisiones pueden tener consecuencias en la calidad de los conjuntos de datos y, en consecuencia, en el rendimiento de los modelos entrenados con estos datos.
+Al conjunto de datos resultante del proceso de consolidación se le llama ``gold standard'' o ``ground truth'' y se utiliza posteriormente para entrenar modelos de aprendizaje automático. 
 
 Referencias recomendadas en anotación de datos para PLN se encuentran en los libros~\cite{fort2016collaborative} y~\cite{pustejovsky2012natural}.
 
