--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -69,7 +69,7 @@
 ~\vfill
 \thispagestyle{empty}
 
-%\noindent Copyright \copyright\ 2014 Andrea Hidalgo\\ % Copyright notice
+\noindent Felipe Bravo Márquez\\
 
 \noindent \textsc{Departamento de Ciencias de la Computación, Universidad de Chile}\\
 
