--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -112,7 +112,7 @@ El contenido se ha recopilado de diversas fuentes. Los temas relacionados con la
 
 
 
-\chapter{Modelo de Espacio Vectorial y Recuperación de Información}
+\chapter{Modelo de Espacio Vectorial}
 \label{cap_ir}
 \input{cap_ir}
 
