--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -51,7 +51,7 @@
 
 \begingroup
 \thispagestyle{empty}
-\AddToShipoutPicture*{\put(0,0){\includegraphics[scale=1.25]{portada}}} % Image background
+\AddToShipoutPicture*{\put(0,0){\includegraphics[scale=1.25]{portada2}}} % Image background
 \centering
 \vspace*{5cm}
 \par\normalfont\fontsize{35}{35}\sffamily\selectfont
