--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -77,6 +77,8 @@
 
 \noindent Apuntes de clases del curso de Procesamiento de Lenguaje Natural de la Universidad de Chile.\\ % License information
 
+\noindent El formato del apunte fue tomado del template de Jasmine Hao: \url{https://www.overleaf.com/articles/cpsc-542f-notes/cvptzcpvsrpn}. \\
+
 \noindent \textit{Borrador, \today} % Printing/edition date
 
 %----------------------------------------------------------------------------------------
