--- a/apunte/structure.tex
+++ b/apunte/structure.tex
@@ -180,7 +180,7 @@
 \newtheorem{problem}{Problem}[chapter]
 % \newtheorem{exercise}{Exercise}[chapter]
 \theoremstyle{blacknumex}
-\newtheorem{exampleT}{Example}[chapter]
+\newtheorem{exampleT}{Ejemplo}[chapter]
 \theoremstyle{blacknumbox}
 \newtheorem{vocabulary}{Vocabulary}[chapter]
 \newtheorem{definitionT}{Definition}[section]
