--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -71,13 +71,15 @@
 
 \noindent Felipe Bravo Márquez\\
 
+\noindent Ilustración Portada por Paulette Filla\\
+
 \noindent \textsc{Departamento de Ciencias de la Computación, Universidad de Chile}\\
 
 \noindent \textsc{github.com/dccuchile/CC6205}\\ % URL
 
 \noindent Apuntes de clases del curso de Procesamiento de Lenguaje Natural de la Universidad de Chile.\\ % License information
 
-\noindent El formato del apunte fue tomado del template de Jasmine Hao: \url{https://www.overleaf.com/articles/cpsc-542f-notes/cvptzcpvsrpn}. \\
+\noindent El formato del apunte fue tomado del template de Jasmine Hao. \\
 
 \noindent \textit{Borrador, \today} % Printing/edition date
 
