--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -51,14 +51,14 @@
 
 \begingroup
 \thispagestyle{empty}
-\AddToShipoutPicture*{\put(0,0){\includegraphics[scale=1.25]{portada3}}} % Image background
+\AddToShipoutPicture*{\put(0,0){\includegraphics[scale=1.25]{portada5}}} % Image background
 \centering
 \vspace*{5cm}
 \par\normalfont\fontsize{35}{35}\sffamily\selectfont
-\textbf{Procesamiento de Lenguaje Natural}\\
-{\LARGE Apunte de Clases (Borrador)}\par % Book title
+\textbf{\textcolor{white}{Procesamiento de Lenguaje Natural}}\\
+{\LARGE \textcolor{white}{Apunte de Clases (Borrador)}}\par % Book title
 \vspace*{1cm}
-{\Huge Felipe Bravo Márquez}\par % Author name
+{\Huge \textcolor{white}{Felipe Bravo Márquez}}\par % Author name
 \endgroup
 
 %----------------------------------------------------------------------------------------
