--- a/apunte/structure.tex
+++ b/apunte/structure.tex
@@ -183,7 +183,7 @@
 \newtheorem{exampleT}{Ejemplo}[chapter]
 \theoremstyle{blacknumbox}
 \newtheorem{vocabulary}{Vocabulary}[chapter]
-\newtheorem{definitionT}{Definition}[section]
+\newtheorem{definitionT}{Definición}[section]
 \newtheorem{corollaryT}[dummy]{Corollary}
 \theoremstyle{ocrenum}
 
